[package]
name = "rustpostal"
version = "0.2.0"
authors = ["Konstantinos Demartinos <kodemartin@protonmail.ch>"]
edition = "2018"
description = "Rust bindings to libpostal"
readme = "README.md"
repository = "https://github.com/kodemartin/rustpostal"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
bitflags = "1.2.1"
